// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchApiMock() Should use success mockName if none provided ~3~: [mockshot] [APISnap] [post /login success] 1`] = `
{
  "httpMethod": "post",
  "mock": {
    "body": {
      "foo": "bar",
      "hello": "world"
    },
    "statusCode": 200
  },
  "mockName": "success",
  "url": "/login"
}
`;

exports[`toMatchApiMock() Should work with axios module ~1~: [mockshot] [APISnap] [get /users/123 axios-success] 1`] = `
{
  "httpMethod": "get",
  "mock": {
    "body": {
      "foo": "bar",
      "hello": "world"
    },
    "statusCode": 200
  },
  "mockName": "axios-success",
  "url": "/users/123"
}
`;

exports[`toMatchApiMock() Should work with chai module ~2~: [mockshot] [APISnap] [post /login chai-success] 1`] = `
{
  "httpMethod": "post",
  "mock": {
    "body": {
      "foo": "bar",
      "hello": "world"
    },
    "statusCode": 200
  },
  "mockName": "chai-success",
  "url": "/login"
}
`;
